# fugue

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.context  Dockerfile.research  LICENSE  README.md  compose.research.yaml  pyproject.toml
.codex/skills/fugue-dev/: SKILL.md
.github/workflows/: ci.yml  fugue-curator-dry-run.lock.yml  fugue-curator-dry-run.md  fugue-curator.lock.yml  fugue-curator.md  pages.yml  research-image.yml
atlas/: compare.html  experiment.html  index.html  methods.html  package-lock.json  package.json  vite.config.js
atlas/editorial/: frontier-swe-v1.yaml  glm-memory-pilot.yaml  kimi-k2-7-code-baseline.yaml  opus-4-8-contract.yaml
atlas/src/: common.js  compare.js  data.js  experiment.js  home.js  site.css
configs/fugue/: curation.yaml
datasets/: enterprise-evidence-use-v1.yaml  pilot.yaml  prompt-injection-action-gate-v1.yaml  prompt-injection-loop-v1.yaml  skillsbench-pdf.yaml  support-data-authority-v1.yaml  wba-transport-ablation-v1.jsonl  wba-transport-ablation-v1.yaml  wba-transport-ablation-v2.jsonl  wba-transport-ablation-v2.yaml
datasets/fugue-self-eval/: maintainer-dev.yaml  maintainer-holdout.yaml  operator-dev.yaml  operator-holdout.yaml
datasets/repo-memory/: agent-retrieval-bench-v1.yaml  continuity-smoke.yaml  gitnexus-contract-v1.yaml  swe-bench-controls-v1.yaml  swe-bench-gitnexus-ablation-v2.yaml  swe-bench-gitnexus-holdout-v1.yaml  swe-bench-hard-discovery-v2.yaml  swe-bench-hard-holdout-v2.yaml  swe-bench-hard-memory-v1.yaml  swe-bench-hard-memory-v2.lock.yaml  swe-bench-qualification-v1.yaml  swe-bench-retrieval-to-action-v1.yaml  swe-qa.yaml
docs/: campaigns.md  extension-guide.md  research-container.md  research-record-projection.md  research.md  task-authoring.md
docs/releases/: 0.1.1.md  0.1.2.md  0.1.md
fugue/: __init__.py  agent_tracing.py  artifacts.py  assistant.py  bridge.py  codex_mcp.py  context_client.py  context_server.py  mcp_gateway.py  mcp_proxy.py  model_plane.py  preflight.py  redaction.py  registration.py  task_interaction.py  tool_policy.py  tui.py  weave_support.py  web.py  web_jobs.py
fugue/agents/: __init__.py  model_plane.py  wandb_inference.py  wba_responses.py
fugue/bench/: __init__.py  agent_runtime.py  ai.py  campaign_accounting.py  campaign_contracts.py  campaign_evidence.py  campaign_lifecycle.py  campaign_store.py  campaigns.py  candidates.py  catalog.py  cli.py  context.py  context_contracts.py  curation.py  datasets.py  deployment.py  evaluation_assets.py  evaluations.py  execution.py  export.py  files.py  harness_contracts.py  integrations.py  job_config.py  library.py  manifest.py  memory.py  operator.py  portable_runtime.py  reproducibility.py  runtime_manager.py  runtime_provenance.py  scoring.py  services.py  sources.py  supervisor.py  task_authoring.py  task_runtime.py  wba_transport_analysis.py  (+2 more)
fugue/research/: __init__.py  agent_contracts.py  approvals.py  bootstrap.py  candidate_sources.py  client.py  contracts.py  database.py  display_labels.py  experiment_views.py  http.py  mcp.py  records.py  runtime.py  service.py  skills.py  store.py  task_recipes.py  traces.py  watch.py
fugue/serve/: __init__.py  __main__.py  app.py  runtime.py  worker.py
fugue/web_static/: app.css  app.js  index.html
proxy/: docker-compose.yaml  litellm.config.yaml
scripts/: check_wba_proxy_conformance.py  preflight.sh  smoke.sh
tests/: test_agent_runtime.py  test_agent_tracing.py  test_ai.py  test_artifacts.py  test_assistant.py  test_atlas_site.py  test_bridge.py  test_campaigns.py  test_candidates.py  test_catalog.py  test_cli.py  test_codex_agent_runtime.py  test_codex_mcp.py  test_context.py  test_context_contracts.py  test_context_study.py  test_curation.py  test_datasets.py  test_demo.py  test_deployment.py  test_enterprise_evidence_use.py  test_evaluation_assets.py  test_evaluations.py  test_execution.py  test_experiment_atlas.py  test_experiment_views.py  test_export.py  test_files.py  test_frontier_campaign.py  test_frontier_campaign_budget.py  test_integrations.py  test_job_config.py  test_library.py  test_manifest.py  test_mcp_gateway.py  test_mcp_proxy.py  test_memory.py  test_model_plane.py  test_operator.py  test_preflight.py  (+26 more)
tests/compat/: __init__.py  openai_client.py  package-lock.json  package.json  run.sh  server.py  vercel-open-responses.mjs
tests/fixtures/: experiment-view-v1-design.json
tools/: __init__.py  check_atlas_build.py  experiment_atlas.py  frontier_campaign.py
(+369 files in other folders)
