[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fugue"
version = "0.1.0"
description = "Harbor + Weave runner for comparing agent harnesses and context systems."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "filelock==3.29.7",
    "pyyaml",
    "rich==15.0.0",
    "rich-argparse==1.8.0",
    "textual==8.2.8",
    "weave==0.53.1",
]

[project.scripts]
fugue = "fugue.bench.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
context = [
    "fastembed==0.8.0",
    "graphiti-core==0.29.2",
    "lancedb==0.34.0",
    "mcp==1.28.1",
    "mem0ai==0.1.118",
    "qdrant-client==1.18.0",
]
serve = [
    "ag-ui-protocol==0.1.19",
    "fastapi>=0.115,<1",
    "fastembed==0.8.0",
    "harbor==0.18.0; python_version >= '3.12'",
    "lancedb==0.34.0",
    "mcp==1.28.1",
    "uvicorn>=0.34,<1",
]

[tool.uv]
# The full context lab contains mem0's older OpenAI client constraint. Candidate
# serving deliberately supports the production-safe context subset above instead.
conflicts = [
    [
        { extra = "context" },
        { extra = "serve" },
    ],
]

[tool.setuptools.packages.find]
include = ["fugue*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
